--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:watch": "npm run test -- --watch"
+    "test": "jest",
+    "tw": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
