--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "jest",
-    "tw": "npm run test -- --watch"
+    "tw": "npm run test -- --watch",
+    "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
